Modify: smoke test
